--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "googleapis": "^108.0.0",
     "node": "^18.10.0",
-    "node-telegram-bot-api": "^0.59.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "telegraf": "^4.10.0"
   }
 }
